--- a/templates/dashboards/admin/events.html
+++ b/templates/dashboards/admin/events.html
@@ -621,14 +621,21 @@
     <aside class="custom-sidebar" id="sidebar">
         <h1 class="sidebar-title">Admin<span style="color: rgb(250, 250, 121);">Pro</span></h1>
         <ul class="sidebar-menu">
-            <li><a href="/admin/dashboard" class="sidebar-link "><i class="bi bi-speedometer2"></i><span>Dashboard</span></a></li>
-            <li><a href="/admin/all-orders" class="sidebar-link"><i class="bi bi-clipboard-data"></i><span>All Orders</span></a></li>
+            <li><a href="/admin/dashboard" class="sidebar-link "><i
+                        class="bi bi-speedometer2"></i><span>Dashboard</span></a></li>
+            <li><a href="/admin/all-orders" class="sidebar-link"><i class="bi bi-clipboard-data"></i><span>All
+                        Orders</span></a></li>
             <li><a href="/admin/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
-            <li><a href="/admin/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
-            <li><a href="/admin/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
-            <li><a href="/admin/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
-            <li><a href="/admin/events" class="sidebar-link active"><i class="bi-megaphone"></i> <span>Events</span></a></li>
-            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
+            <li><a href="/admin/customers" class="sidebar-link"><i
+                        class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
+            <li><a href="/admin/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a>
+            </li>
+            <li><a href="/admin/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a>
+            </li>
+            <li><a href="/admin/events" class="sidebar-link active"><i class="bi-megaphone"></i> <span>Events</span></a>
+            </li>
+            <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a>
+            </li>
         </ul>
         <!-- User Card -->
         <div class="sidebar-user-card" style="color: #4fffb0;">
@@ -819,7 +826,7 @@
         // Delete event
         function deleteEvent(eventId, eventName) {
             if (!confirm('Are you sure you want to delete this event "' + eventName + '" ?')) return;
-                fetch('/admin/delete-event', {
+            fetch('/admin/delete-event', {
                 method: 'DELETE',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ id: eventId })
@@ -907,7 +914,15 @@
         });
     </script>
 
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
 
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
+    </script>
 
 </body>
 
