--- a/templates/dashboards/admin/invoice.html
+++ b/templates/dashboards/admin/invoice.html
@@ -1020,7 +1020,15 @@
 
         });
     </script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
 
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
+    </script>
 </body>
 
 </html>
