--- a/templates/dashboards/manager/events.html
+++ b/templates/dashboards/manager/events.html
@@ -907,7 +907,15 @@
         });
     </script>
 
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
 
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
+    </script>
 
 </body>
 
