--- a/templates/dashboards/packaging/packaging.html
+++ b/templates/dashboards/packaging/packaging.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+    <script src="{{url_for('static',filename='tailwind.js')}}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 
     <style>
         :root {
@@ -282,7 +282,7 @@
             animation: float-glow 3s ease-in-out infinite;
         }
     </style>
-    
+
     <style>
         .user-card {
             display: flex;
@@ -637,6 +637,15 @@
 
         // Initialize the dashboard when the window loads
         window.onload = renderDashboard;
+    </script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
     </script>
 </body>
 
