--- a/templates/dashboards/sales/edit_invoice.html
+++ b/templates/dashboards/sales/edit_invoice.html
@@ -13,7 +13,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- Tailwind CSS for styling -->
-      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
+    <script src="{{url_for('static',filename='tailwind.js')}}"></script>
     <!-- Google Fonts for a modern look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -3280,7 +3280,7 @@
                 const responseContent = document.getElementById('printResponseContent');
                 const modalFooter = document.getElementById('printPopupFooter');
                 const popupCloseBtn = document.getElementById('popupCloseBtn');
-                
+
 
                 // Reset modal states before showing
                 loadingDots.style.display = 'flex';
@@ -3332,7 +3332,7 @@
 
                                 document.getElementById('invoiceNumber_for_sharing').value = data.invoice_number;
                                 popupCloseBtn.disabled = false;
-                                
+
                             }, 1000); // Optional delay for smooth transition
 
                         } else {
@@ -3409,6 +3409,15 @@
         document.getElementById('billingForm').addEventListener('reset', hideLoading);
         // Hide loading spinner on page load
         window.addEventListener('load', hideLoading);
+    </script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
     </script>
 </body>
 
