--- a/templates/dashboards/sales/ready_to_go.html
+++ b/templates/dashboards/sales/ready_to_go.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-      <script src="{{url_for('static',filename='tailwind.js')}}"></script>
+    <script src="{{url_for('static',filename='tailwind.js')}}"></script>
 
     <style>
         :root {
@@ -1724,7 +1724,7 @@
         };
         document.getElementById('deleteConfirmOk').onclick = async function () {
             if (!deleteInvoiceNumber || !deleteTargetLi) return closeDeleteModal();
-            
+
             closeDeleteModal();
             // 1. Show processing first
             updateModalContent(processingStyles);
@@ -1742,8 +1742,7 @@
             try {
                 const response = await fetch(`/sales/delete_invoice/${deleteInvoiceNumber}`, { method: 'DELETE' });
 
-                if (!response.ok) 
-                { 
+                if (!response.ok) {
                     modalInner.classList.add('opacity-0');
                     updateModalContent(errorStyles);
                     modalInner.classList.remove('opacity-0');
@@ -1752,7 +1751,7 @@
                 const result = await response.json();
 
                 if (result.success) {
-                    
+
                     fetchInvoices().then(() => {
                         filterAndRenderInvoices();
                     });
@@ -1760,7 +1759,7 @@
                     modalInner.classList.add('opacity-0');
                     updateModalContent(successStyles);
                     modalInner.classList.remove('opacity-0');
-                
+
                 } else {
                     modalInner.classList.add('opacity-0');
                     updateModalContent(errorStyles);
@@ -2385,6 +2384,15 @@
             });
         });
 
+    </script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script>
+        const socket = io();
+
+        socket.on("force_logout", () => {
+            // Optional: call logout endpoint
+            window.location.href = "/logout";
+        });
     </script>
 </body>
 
