--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Light It Up</title>
+  <title>Login</title>
   <link rel="icon" href="{{ url_for('static', filename='logo.ico') }}" type="image/x-icon">
   <style>
     * {
