test for production V.0.4

--- a/templates/dashboards/admin/all_orders.html
+++ b/templates/dashboards/admin/all_orders.html
@@ -666,7 +666,7 @@
     <script>
 
         viewInvoiceDetails = function (invoiceNumber) {
-            window.open(`/manager/invoice/${invoiceNumber}`, '_blank', 'noopener');
+            window.open(`/admin/invoice/${invoiceNumber}`, '_blank', 'noopener');
         };
 
 
