--- a/templates/dashboards/manager/customers.html
+++ b/templates/dashboards/manager/customers.html
@@ -874,7 +874,7 @@
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <input type="text" class="form-control" id="nameFilter" placeholder="Enter Customer Name...">
+                    <input type="text" class="form-control" id="nameFilter" placeholder="Enter Customer Details...">
                 </div>
             </div>
         </div>
