--- a/templates/dashboards/sales/edit_invoice.html
+++ b/templates/dashboards/sales/edit_invoice.html
@@ -1716,7 +1716,7 @@
                             <div class="form-group" id="eventSelectionGroup" style="display: none;">
                                 <div class="section-header">
                                     <span for="customerSelect" class="icon"><i class="fa-solid fa-bullhorn"></i></span>
-                                    SELECT EVENT
+                                    SELECT EVENT (Optional)
                                 </div>
                                 <br>
                                 <!-- Responsive container for form elements -->
