--- a/templates/dashboards/account/verify_payment.html
+++ b/templates/dashboards/account/verify_payment.html
@@ -1711,9 +1711,8 @@
 
                 if (data.success) {
 
-                    fetchInvoices().then(() => {
-                        filterAndRenderInvoices();
-                    });
+                    await fetchInvoices();
+                    filterAndRenderInvoices();
 
                     isProcessingState = false; // Transaction finished
                     processing.classList.add('hidden');
@@ -1849,9 +1848,9 @@
                     if (cancelOrderTargetLi) {
                         cancelOrderTargetLi.remove();
                     }
-                    fetchInvoices().then(() => {
-                        filterAndRenderInvoices();
-                    });
+                    await fetchInvoices();
+                    filterAndRenderInvoices();
+
 
                     document.getElementById('successText').textContent = 'Success!';
                     document.getElementById('successSubText').textContent = 'Your cancellation request has been submitted.';
@@ -1909,6 +1908,20 @@
 
         // Fetch invoices from backend and render
         async function fetchInvoices() {
+            const list = document.getElementById('invoiceList');
+            list.innerHTML = `
+                <div class="col-span-full text-center py-10 text-gray-400" id="loading-indicator">
+                    <svg class="animate-spin h-6 w-6 mr-3 inline text-indigo-500"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                            stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
+                    Fetching Data...
+                </div>
+            `;
             try {
                 const response = await fetch('/account/orders-payment-list');
                 if (!response.ok) throw new Error('Failed to fetch invoices');
