--- a/templates/dashboards/admin/products.html
+++ b/templates/dashboards/admin/products.html
@@ -870,7 +870,7 @@
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <input type="text" class="form-control" id="nameFilter" placeholder="Enter Product Name...">
+                    <input type="text" class="form-control" id="nameFilter" placeholder="Enter Product Details...">
                 </div>
             </div>
         </div>
