--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -898,6 +898,10 @@
         #cancelBtn {
             border: 1px solid #000;
         }
+
+        #emergencyModal{
+            z-index: 2150;
+        }
     </style>
 
 </head>
@@ -964,7 +968,7 @@
                         <option value="Transport">Transport</option>
                         <option value="Account">Account</option>
                         <option value="Builty">Builty</option>
-                        <option value="Retail">Retail</option>
+                        <!-- <option value="Retail">Retail</option> -->
                     </select>
                 </div>
 
@@ -1009,7 +1013,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Add New User</h5>
+                    <h5 class="modal-title" style="color: #2563eb;">Add New User</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -1034,7 +1038,7 @@
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
                                 <option value="Builty">Builty</option>
-                                <option value="Retail">Retail</option>
+                                <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
                     </form>
@@ -1052,7 +1056,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit User</h5>
+                    <h5 class="modal-title" style="color: #2563eb;">Edit User</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -1075,7 +1079,7 @@
                                 <option value="Transport">Transport</option>
                                 <option value="Account">Account</option>
                                 <option value="Builty">Builty</option>
-                                <option value="Retail">Retail</option>
+                                <!-- <option value="Retail">Retail</option> -->
                             </select>
                         </div>
                         <div class="mb-3">
