--- a/templates/dashboards/sales/cancel_orders.html
+++ b/templates/dashboards/sales/cancel_orders.html
@@ -1862,9 +1862,9 @@
                 const resp = await deleteInvoice(deleteInvoiceNumber, deleteStatus);
                 if (resp && resp.success) {
 
-                    fetchInvoices().then(() => {
-                        filterAndRenderInvoices();
-                    });
+                    await fetchInvoices();
+                    filterAndRenderInvoices();
+
 
                     modalInner.classList.add('opacity-0');
                     updateModalContent(deleteStatus === 1 ? successStyles_1 : successStyles_0);
@@ -2000,6 +2000,20 @@
 
         // Fetch invoices from backend and render
         async function fetchInvoices() {
+            const list = document.getElementById('invoiceList');
+            list.innerHTML = `
+                <div class="col-span-full text-center py-10 text-gray-400" id="loading-indicator">
+                    <svg class="animate-spin h-6 w-6 mr-3 inline text-indigo-500"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                            stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
+                    Fetching Data...
+                </div>
+            `;
             try {
                 const response = await fetch('/sales/canceld-orders-list');
                 if (!response.ok) throw new Error('Failed to fetch invoices');
